Update SECRET_KEY in .env file

--- a/ecommerce_backend/.env
+++ b/ecommerce_backend/.env
@@ -1,4 +1,4 @@
-SECRET_KEY='django-insecure-w4lvl@@5#&56ux61-y(^r@i8meeua)^s-uhfdd%yvlzyyo_gg1'
+SECRET_KEY='your-keys'
 DEBUG =env.bool('DEBUG', default=False)
 ALLOWED_HOSTS='localhost,127.0.0.1'
 
