--- a/ecommerce_backend/ecommerce_backend/requirements.txt
+++ b/ecommerce_backend/ecommerce_backend/requirements.txt
@@ -54,6 +54,7 @@ PyYAML==6.0.2
 requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
+setuptools>=75.1.0
 typing_extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
